--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/music
 spring.datasource.username=postgres
 spring.datasource.password=qwertyui
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 file.storage.location=/home/flex/Music
 
