--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,9 @@ spring.datasource.username=postgres
 spring.datasource.password=qwertyui
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
-
-file.storage.location=/home/flex/Music
+track.storage.location=./storage/tracks
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=1GB
 spring.servlet.multipart.enabled=true
-
+#spring.servlet.multipart.location=
