--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/music
 spring.datasource.username=postgres
-spring.datasource.password=qwertyui
+spring.datasource.password=1010
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 track.storage.location=./storage/tracks
