--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,7 @@ spring.datasource.password=1010
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 track.storage.location=./storage/tracks
-
-spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-file-size=1GB
 spring.servlet.multipart.max-request-size=1GB
 spring.servlet.multipart.enabled=true
 #spring.servlet.multipart.location=
